2001-11-27	<mschimek@users.sf.net>

	* v4l.c: Try VIDEO_PALETTE_YUYV before _YUV422. (Some drivers
	  do not support _YUYV, and YUV422 may be YUYV (bttv), UYVY
	  (dc10) or according to v4l api spec YYYYUUVV.)
	* psycho.c: Fixed array initialization, segfault was possible.

2001-11-20	<mschimek@users.sf.net>

	* motion.c fix: ignored result 2nd of (0,0) test (rare, not critical).
	* mp1e.1: Corrected -F typo in examples.
	* video/mpeg1.c: Frame skipping flaws. Rewrote.

2001-11-06	<mschimek@users.sf.net>

	* configure.in: Corrected $AS.
	* v4l.c: grab size / capture size / decimating fixed.
	* v4l2.c: 288->240 fallback fixed.

2001-11-01	<mschimek@users.sf.net>

	* mp2.c: Fixed audio table selection (wrong sampling_freq).
	* oss.c: Mixer always set volume of line, not requested source.
	* main.c: Added fallback for unsupported joint stereo.
	* mp1e.1: Corrected a few typos.

2001-10-23	<mschimek@users.sf.net>

	* mp2.c: Improved the codec status stuff, moved the sample
	  parameters code.
	* systems.c: Made buffer allocation in add_input_stream
	  optional to clean up init() in mp2.c.
	* b_mp1e.c: Added format enumeration code, unfinished.

2001-10-21	<mschimek@users.sf.net>

	* video/mpeg1.c: Fixed incorrect type of bit_rate, strdup(0)
	  in option_print, virtual > coded_frame_rate bug.
	* audio/mp2.c: mpeg1_mp2_thread -> class.mainloop. 

2001-10-18	<mschimek@users.sf.net>
	
	* esd.c: Replaced timestamping code by the v4l type, should
	  better handle audio dropping.
	* oss.c: Accept other formats than S16LE.

2001-10-17	<mschimek@users.sf.net>

	* oss.c: Fixed sampling_freq check, reported by Ralf Oehler.
	* alsa.c: Corrected 0.9 compiling errors.

2001-10-14	<mschimek@users.sf.net>

	* mpeg1.c: Fixed drop & stop bug, fixed off-by-one frame_rate_code.
	* added rte_parameters and status.

2001-10-01	<mschimek@users.sf.net>

	* audio: Polished the timestamping, some bad changes since
	  09-20. Still not what I'd like, but hopefully sufficient.