@@ -1,4 +1,4 @@
-.TH MP1E 1 "$Date: 2001-11-22 17:51:07 $" "mp1e manual" \" -*- nroff -*-
+.TH MP1E 1 "$Date: 2001-11-28 22:13:22 $" "mp1e manual" \" -*- nroff -*-
 .SH NAME
 mp1e \- realtime MPEG-1 audio/video encoder
 .SH SYNOPSIS
@@ -669,13 +669,13 @@ to avoid hour long recording of snow or silence and you have
 to wait for the next repeat in 2022...
 .SH BUGS
 Versions prior 1.7 are heavily bugged and should be avoided. Versions
-prior 1.8 created invalid stream syntax which only a few players would
+prior 1.8 create invalid stream syntax which only a few players would
 accept, and inaccurate predictive coding which has been replaced in
 version 1.8.
 .P
 The ALSA and ESD interface in 1.9 doesn't work properly. Versions prior
 1.9.1 can hang due to a sync flaw and won't compile with ALSA devel libs
-0.9. Mixer volume wasn't set for the requested but the default PCM
+0.9. The mixer volume wasn't set for the requested but the default PCM
 source by versions prior 1.9.2.
 .SH AUTHORS
 .IP \(em
